+ fare user control.

--- a/src/Modules/CarModel/CarModel/View/CarModelView.xaml
+++ b/src/Modules/CarModel/CarModel/View/CarModelView.xaml
@@ -913,7 +913,9 @@
                 <TabItem Name="Extras"  Header="Extras">
                 </TabItem>
                 <photo:PhotoFrame/>
+                <TabItem Name="Ficha" Header="Ficha Tecnica"></TabItem>
             </TabControl>
+           
 
         </Grid>
     </Grid>
